--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install elm && elm install
+      - run: npm install -g elm && elm install
       - run:
           name: Run tests
           command: elm test
