--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,18 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install --save-dev elm && elm install
+      - run: npm install && npx elm install
       - run:
           name: Run tests
-          command: elm test
+          command: npx elm test
+      - run:
+          name: Build
+          command: npx elm make src/Main.elm
 
       - save_cache:
           paths:
             - elm-stuff
+            - node_modules
           key: v1-dependencies-{{ checksum "elm.json" }}
 
       - persist_to_workspace:
