--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "hello-elm",
-  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "elm-format src",
+    "test": "elm-format --validate src && elm make src/Main.elm"
   },
   "devDependencies": {
-    "elm": "^0.19.0-no-deps"
+    "elm-test": "^0.19.0-rev3",
+    "elm-format": "^0.8.1"
+  },
+  "dependencies": {
+    "elm": "^0.19.0-bugfix6"
   }
 }
