--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "format": "elm-format src",
-    "test": "elm-format --validate src && elm make src/Main.elm"
+    "test": "elm-format --validate src && elm make src/Main.elm --output=entrypoint.js"
   },
   "devDependencies": {
     "elm-test": "^0.19.0-rev3",
