--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "elm.json" }}
+            - v1-dependencies-v2-{{ checksum "elm.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -26,7 +26,7 @@ jobs:
           paths:
             - elm-stuff
             - node_modules
-          key: v1-dependencies-{{ checksum "elm.json" }}
+          key: v1-dependencies-v2-{{ checksum "elm.json" }}
 
       - persist_to_workspace:
           root: ~/repo
